Upgrade bicrypto to version 5.7.7
Updated bicrypto to version 5.7.7 and provided new download link. Added notes on resolving installation issues related to Virtualmin disk quota.

--- a/bicrypto V5.7.7
+++ b/bicrypto V5.7.7
@@ -1,8 +1,7 @@
 # bicrypto-trading-platform
-bicrypto V5.7.2 +Addons new update + Mobileapp ios & android latest version V5:
+bicrypto V5.7.2 +Addons AI MARKET MAKER  + Mobileapp ios & android latest version V5:
 must read readme file . download   :
-
-https://www.mediafire.com/file/6buusdg3loztv8s/bicryptoV5.7.2Addons.zip/file
+https://www.mediafire.com/file/nvxjiyhkh7n3l0b/BicryptoV5.7.7.zip/file
 reboot after adding your exchange api and secret
 some user got error while pnpm install they failed to install modules because of virtualmin disk quota is by default 2GB  go to edit server on virtualmin then click quotas and limits then choose unlimited then restart vps it will work  
 
