Update and rename bicrypto V5.7.7 to bicrypto V6.0.2

--- a/bicrypto V6.0.2
+++ b/bicrypto V6.0.2
@@ -1,7 +1,7 @@
 # bicrypto-trading-platform
-bicrypto V5.7.2 +Addons AI MARKET MAKER  + Mobileapp ios & android latest version V5:
+bicrypto V5.7.2 +Addons AI MARKET MAKER  + COPY TRADING + PAYMENT GATEWAY :
 must read readme file . download   :
-https://www.mediafire.com/file/nvxjiyhkh7n3l0b/BicryptoV5.7.7.zip/file
+https://www.mediafire.com/file/ceggo592cpcj0bt/BicryptoV6%252Baddons.zip/file
 reboot after adding your exchange api and secret
 some user got error while pnpm install they failed to install modules because of virtualmin disk quota is by default 2GB  go to edit server on virtualmin then click quotas and limits then choose unlimited then restart vps it will work  
 
