Update and rename bicrypto V6.0.4 to bicrypto V6.0.5

--- a/bicrypto V6.0.5
+++ b/bicrypto V6.0.5
@@ -1,7 +1,7 @@
-# bicrypto-trading-platform
-bicrypto V6.0.4 +Addons AI MARKET MAKER  + COPY TRADING + PAYMENT GATEWAY :
+# bicrypto-trading-platform NULLED
+bicrypto V6.0.5 +Addons AI MARKET MAKER  + COPY TRADING + PAYMENT GATEWAY :
 must read readme file . download   :
-https://www.mediafire.com/file/87smswjp6q2v5wh/bicryptoV6.0.4.Addon.zip/file
+https://www.mediafire.com/file/xsktaqqx36enhhs/bicryptoV6.0.5nulled.zip/file
 reboot after adding your exchange api and secret
 some user got error while pnpm install they failed to install modules because of virtualmin disk quota is by default 2GB  go to edit server on virtualmin then click quotas and limits then choose unlimited then restart vps it will work  
 
