Update and rename bicrypto V6.0.5 to bicrypto V6.1.2

--- a/bicrypto V6.1.2
+++ b/bicrypto V6.1.2
@@ -1,7 +1,7 @@
 # bicrypto-trading-platform NULLED
-bicrypto V6.0.6 +Addons AI MARKET MAKER  + COPY TRADING + PAYMENT GATEWAY :
-must read readme file . download   :
-https://www.mediafire.com/file/xsktaqqx36enhhs/bicryptoV6.0.5nulled.zip/file
+bicrypto V6.1.2 Nulled  +Addons AI MARKET MAKER  + COPY TRADING + PAYMENT GATEWAY :
+must read readme file . download   : all addons activated no purchase redirect just do not click on any update button 
+https://www.mediafire.com/file/on6vmse2621ihah/bicryptoV6.1.2Nulled.zip/file
 reboot after adding your exchange api and secret
 some user got error while pnpm install they failed to install modules because of virtualmin disk quota is by default 2GB  go to edit server on virtualmin then click quotas and limits then choose unlimited then restart vps it will work  
 
