--- a/bicrypto V6.1.6
+++ b/bicrypto V6.1.6
@@ -1,7 +1,8 @@
 # bicrypto-trading-platform NULLED
-bicrypto V6.1.2 Nulled  +Addons AI MARKET MAKER  + COPY TRADING + PAYMENT GATEWAY :
-must read readme file . download   : all addons activated no purchase redirect just do not click on any update button 
-https://www.mediafire.com/file/on6vmse2621ihah/bicryptoV6.1.2Nulled.zip/file
+bicrypto V6.1.6 NOT NULLED untouched version   +Addons AI MARKET MAKER  + COPY TRADING + PAYMENT GATEWAY :
+all addons included but the admin dashboard will redirect to purchase code verification code wait for null method it will be shared here or try to nulled yourself
+https://www.mediafire.com/file/3netge4c3vc76d9/bicryptoV-6.1.6.zip/file
+
 reboot after adding your exchange api and secret
 some user got error while pnpm install they failed to install modules because of virtualmin disk quota is by default 2GB  go to edit server on virtualmin then click quotas and limits then choose unlimited then restart vps it will work  
 
