--- a/bicrypto V6.1.6
+++ b/bicrypto V6.1.6
@@ -1,6 +1,8 @@
 # bicrypto-trading-platform NULLED
-bicrypto V6.1.6 NOT NULLED untouched version   +Addons AI MARKET MAKER  + COPY TRADING + PAYMENT GATEWAY :
-all addons included but the admin dashboard will redirect to purchase code verification code wait for null method it will be shared here or try to nulled yourself
+bicrypto V6.1.6  nulled version fully working the null using the folder LIC
+https://www.mediafire.com/file/a2ioayq2i35itrn/bicryptoV6.1.6Nulled.zip/file
+
+bicrypto V6.1.6 untouched version
 https://www.mediafire.com/file/3netge4c3vc76d9/bicryptoV-6.1.6.zip/file
 
 reboot after adding your exchange api and secret
